k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kino-frontend
  namespace: kino-im-blauen-salon
spec:
  selector:
    app: kino-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
